Linux port: enable cross-compilation
Signed-off-by: Gilles Talis <gilles.talis@gmail.com>

--- a/engine/linux/Makefile
+++ b/engine/linux/Makefile
@@ -12,9 +12,16 @@ libpng_SOURCES := $(wildcard libpng/*.c)
 libpng_SOURCES := $(filter-out libpng/pngtest.c,$(libpng_SOURCES))
 libpng_OBJECTS := $(libpng_SOURCES:.c=.o)
 
+SDL_CFLAGS ?= `sdl-config --cflags`
+SDL_LDFLAGS ?= `sdl-config --libs`
+ZLIB_CFLAGS ?= `pkg-config zlib --cflags`
+ZLIB_LDFLAGS ?= `pkg-config zlib --libs`
+OPENAL_CFLAGS ?= `pkg-config openal --cflags`
+OPENAL_LDFLAGS ?= `pkg-config openal --libs`
+
 CFLAGS   = -Wall -Wextra -Wmissing-prototypes -DLINUX $(addprefix -I,$(INCLUDES))
-CFLAGS  += `sdl-config --cflags` `pkg-config zlib --cflags` `pkg-config openal --cflags`
-LDFLAGS  = -lGL -lm -z `sdl-config --libs` `pkg-config zlib --libs` `pkg-config openal --libs` -lSDL_mixer
+CFLAGS  += $(SDL_CFLAGS)  $(ZLIB_CFLAGS) $(OPENAL_CFLAGS)
+LDFLAGS  =  $(SDL_LDFLAGS) $(ZLIB_LDFLAGS) $(OPENAL_LDFLAGS) -lGLESv1_CL -lGLESv1_CM -lSDL_mixer -lm -z
 
 OBJECTS = $(linux_OBJECTS) $(engine_OBJECTS) $(libpng_OBJECTS)
 
@@ -29,10 +36,10 @@ release: CFLAGS += -DRELEASE
 release: all
 
 shmup: $(OBJECTS)
-	gcc -o $@ $^ $(LDFLAGS)
+	$(CC) -o $@ $^ $(LDFLAGS)
 
 %.o: %.c
-	gcc -o $@ -c $(CFLAGS) $< 
+	$(CC) -o $@ -c $(CFLAGS) $<
 
 .PHONY: clean
 clean:
